WIAPASCAL CHANGE LOG
======================

2024/11/
        08 Changed the SettingForm Items ComboBox to a ListView with icons;
	   Changed Changed several things in SettingForm;
        07 Changed params of SelectDeviceItem;
	   Added use of GetDocumentHandling in Feeder (cannot test);
	   Moved wptMAX PaperType at end (Problems with XML Write);
	   Deleted use of initItemValues in SettingsForm.SelectCurrentItem
	   Added Feeder GroupBox in SettingsForm
        06 Added DocumentHandling for first Duplex tests (i need a Duplex Scanner);
	   Added GetSelectedItemSubItems;
	   Changed way GetProperty returns WIAProp_FLAG array 
        05 Renamed Interfaces property to xxxIntf;
	   Added property SelectedItem: PWIAItem;
	   Added method RefreshDeviceList;
	   SettingsForm select the first Item if started with -1;
	   Updated tests;
        04 Added TWIAManager.SelectDeviceItem

2024/10/
        31 Columns width adjustments in SelectForm
        30 Delphi Compatibility
        29 TWIADevice.GetProperty Process only WIA Types, added all Arrays/Ranges;
	   Changed names from PaperSize to PaperType;
	   Added functions THInchToSize/Str in PaperSizes;
	   Added Custom Paper Size in WIADevice and in SettingsForm;
	   Added Panels for PaperAlign/Size in SettingsForm.
        28 Added PIWiaItem2 as array of IWIAItem2;
           Changed interface IWIAItem2.DeviceDlg declaration;
           Changed DownloadNativeUI method
        25 Added Item Category;
	   First Test with Native UI;
	   Changed some Const Names.
        24 Use always pWiaTransfer.Download(0, Self) until further tests;
           Changed some var names in SettingsForm; 
           Added UseNativeUI and WIACaps Array in SettingsForm
        23 Added PaperAlign and SetParams method; 
	   Updated SetPaperSize; 
	   Added PaperAlign and changed Orentation Icons in SettingsForm.
	   Added AExt and AFormat in Download Method; 
	   Added Download_xxx properties;
	   Added Progress Status in Demo.