@@ -1,3 +1,8 @@
 Add in dfm
 
+//cbBackFirst onClick
+//edResolution onChange
+//trResolution onChange
+
+
 Delphi Properties not found in dfm
