@@ -2,6 +2,10 @@ WIAPASCAL CHANGE LOG
 ======================
 
 2024/11/
+        11 GetParamsCapabilities and SetParams only if ItemCategory<>wicAUTO;
+	   Commented exception when Get/Set Params and Capabilities;
+	   Added define UI_Tests for testing UI if Feeder or Range Editor Resolution;
+	   SettingsForm set DocHandling if Feeder, set Resolution from Range editor;
         08 Changed the SettingForm Items ComboBox to a ListView with icons;
 	   Changed Changed several things in SettingForm;
         07 Changed params of SelectDeviceItem;
